# zvezdin-py

./: .gitignore  README.md  app.py  backtest.py  binance-download.sh  broker.py  config.example.yml  config.py  config_parser.py  configparser.py  emergency.py  factories.py  kline.py  level.py  lib.py  localbroker.py  logger.py  order.py  orderlist.py  ordermanager.py  pyproject.toml  readme.md  requirements.txt  strategy.py  test.py  test_broker.py  test_config_parser.py  test_kline.py  test_localbroker.py  test_orderlist.py  test_ordermanager.py  test_strategy.py  test_utils.py  todo.md  tradingcontextglobal.py  tradingcontextlocal.py  trend.py  utils.py
lib/: indicators.py  levels.py  test_indicators.py  test_levels.py  test_trend.py  trend.py
strategy/: emitter.py  ordermanager.py  test_utils.py  tradingcontextglobal.py  tradingcontextlocal.py  utils.py
strategy/buy_and_hold/: __init__.py  config.example.yml  emitter.py  ordermanager.py  tradingcontextlocal.py
strategy/levels_v1/: __init__.py  config.example.yml  config_parser.py  emitter.py  ordermanager.py  test_config_parser.py  test_emitter.py  test_ordermanager.py  test_strategy.py  tradingcontextglobal.py  tradingcontextlocal.py
strategy/sell_and_hold/: emitter.py  tradingcontextglobal.py  tradingcontextlocal.py
test_data/: test_kline_data.csv  test_kline_data_header.csv
test_data/levels/: test_calc_levels_2.xlsx
